# Thesis-Banana-CNN

./: .gitignore  Dockerfile  README.md  app.py  fix_model_for_flask.py  main.py  pyproject.toml  requirements.txt
static/js/: index.js  result.js  upload-form.js
templates/: index.html  layout.html  result.html  upload-form.html
utils/: enhanced_resnet50_deployment_v1.h5  enhanced_resnet50_deployment_v1.keras  enhanced_resnet50_deployment_v2.keras  enhanced_resnet50_deployment_v3.keras  enhanced_resnet50_final.keras  enhanced_resnet50_final_fixed.keras  model_metadata_v2.json  predictor.py  training_codebase.html
utils/artifacts/: class_indices_v5.json
utils/models/: __init__.py  baseline.py  common.py  enhanced.py  model_notes.txt
