[project]
name = "banana-leaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=25.1.0",
    "numpy==2.1.3",
    "pillow>=12.1.1",
    "tensorflow==2.19.0",
    "tensorflow-estimator==2.15.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
]
